# cleo

./: .gitignore  Cargo.toml  Dockerfile  README.txt  routes.txt  todo.txt
cleo/: Cargo.toml  docker-compose.yaml
cleo/.sqlx/: query-030cff68a91c9fe309642091e3c76619afdedcf8b29e46c993811890ea16e38e.json  query-11186221eb60140af7f0fdb495a148eca08b668fc5bc10efc5226f48b326c7e0.json  query-1a20af44c15490bae42abf2273bf9e34c54eeadb4554292f94c633b476499565.json  query-2034b156db3e15079b99b8b9782cbd83a67a5c818ac37c668d15f5d1fd45ae63.json  query-239612c9589ccdb8b1e1296e122e491b1dd71ba3e8b86a995b2a8e9896b65ab4.json  query-251f0c0952daef6bfc991476d93078e400f8ac4bc41ebbd4076907cae0f4729b.json  query-2aa5aaf60d8728747ab7e47c43a0b184130eeabda3ffd451c0beac67ea932354.json  query-2caf0a8c32ea08fcc19f376b50077205659ad04ce38fd091e7a94f0d4f0548a1.json  query-38539dff71d34ae88bc01f00e8b67f52dcd3cf9f57bdddb3540cc3f4129dd8fd.json  query-38ec8e8f451de1e5b1bc0ce3844d493756a1f567f58ba2ab81c841a6a6d0d9db.json  query-3cf9c9b4597d40930bb828452a33aeef693cce3b1a470ee0e85ba816f235d0f1.json  query-42452537c54848c3238fac86cb7d3bd33a3bc27c882d9af58cad3b6ff6e728a6.json  query-4e51f4812464713ce85224388190302e4079cb59000dcff352af5dc498630d57.json  query-57110152faa521d0dd019d552ed15c6042ba280bbbb29f1a0b7ec8268c2c7858.json  query-6bed4becb84b1c3a1097284469416f804e1dc232713f8fd9ba09542aec7c1ad9.json  query-8381a1c7619c9a683ac78f1768c81c64b20a6e9f4650b71496f5690dfb2f21aa.json  query-8ed870b2563b00f16d18376532e5c0d7784ef8909b0b82117a2c8185374376e0.json  (+11 more)
cleo/migrations/: 20250220213138_init.up.sql
src/: lib.rs  (+1 more)
(+81 files in other folders)
