[package]
name = "cleo"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
sha2 = "0.10.8"
chrono = "0.4.38"
bcrypt = "0.17.0"
actix-web = "4.9.0"
html5ever = "0.31.0"
actix-cors = "0.7.0"
actix-files = "0.6.6"
serde_json = "1.0.140"
actix-multipart = "0.7.2"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "macros"] }
lettre = { version = "0.10.0-beta.2", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "hostname", "r2d2", "builder"] }
